--- a/moorea_guilds.html
+++ b/moorea_guilds.html
@@ -72,12 +72,36 @@ names(data)</code></pre>
 abun &lt;- abun[order(-abun[,2]),] #sorts by total abundance
 top_50 &lt;- abun[1:50,] #top 50 most abundant species
 data.50 &lt;- subset(data,data$Taxonomy %in% top_50$Taxonomy) # crop original data to top 50 species</code></pre>
-<p>We are interested in groups of species, first by family, then perhaps by trophic group. We are interested in concordance and abundance variation across years, between sites, and between habitats</p>
+<p>We are interested in groups of species, first by family, then perhaps by trophic group. We are interested in concordance and abundance variation across years, between sites, and between habitats. We add zeros to the data for year/site/habitat combinations where fish of a given species were not observed.</p>
 <pre class="r"><code>data.fams &lt;- summaryBy(Count~Family+Year+Site+Habitat,data=data.50,FUN=sum,na.rm=T)
+data.fams$Family &lt;- as.character(data.fams$Family)
+data.fams$Habitat &lt;- as.character(data.fams$Habitat)
+fams &lt;- unique(data.fams$Family)
 names(data.fams)[5] &lt;- 'Abundance'
 names(data.fams)</code></pre>
 <pre><code>## [1] &quot;Family&quot;    &quot;Year&quot;      &quot;Site&quot;      &quot;Habitat&quot;   &quot;Abundance&quot;</code></pre>
-<p>Now we have the data in a more usable format, where counts are aggregated by family, but separated by year, site, and habitat (fringing reef vs. back reef vs. fore reef). Next we have to calculate, for each family, the coefficient of variation across years and sites.</p>
+<p>Now we have the data in a more usable format, where counts are aggregated by family, but separated by year, site, and habitat (fringing reef vs. back reef vs. fore reef). Next we have to calculate, for each family, the coefficient of variation in abundance with each year/site/habitat combination as a different data point.</p>
+<pre class="r"><code>cv.fams &lt;- data.frame(Family=fams,CV=rep(NA,length(fams)))
+cv.fams$CV &lt;- sapply(fams,function(x) sd(subset(data.fams$Abundance,data.fams$Family==x))/mean(subset(data.fams$Abundance,data.fams$Family==x)))</code></pre>
+<p>Now, for Kendall’s W, a measure of concordance, we rank the sites for each speices in each year according to their relative abundance. There are 18 unique sites (Sites 1-6 times 3 unique Habitats, fringing reef, fore reef, back reef) and 9 years (2006-2014). Then, for each species, we calculate Kendall’s W,</p>
+<p><span class="math">\[W = \dfrac{12S}{m^{2}(n^{3}-n)}\]</span></p>
+<p>where <span class="math">\(m\)</span> is the number of years (9), <span class="math">\(n\)</span> is the number of sites (18). <span class="math">\(S = \sum_{i=1}^{n}(R_{i} - \bar{R})^{2}\)</span> is the sum of squared deviations of each site i’s total rank across years, <span class="math">\(R_{i} = \sum_{j=1}^{m}r_{i,j}\)</span> from its mean rank, <span class="math">\(\bar{R} = 1/n\sum_{i=1}^{n}R_{i}\)</span></p>
+<pre><code>## 
+## 
+## |Family         |    CV| Kendalls W|
+## |:--------------|-----:|----------:|
+## |Acanthuridae   | 0.746|      0.622|
+## |Balistidae     | 1.313|      0.944|
+## |Chaetodontidae | 0.589|      0.321|
+## |Cirrhitidae    | 1.716|      0.782|
+## |Labridae       | 0.787|      0.890|
+## |Lethrinidae    | 1.874|      0.488|
+## |Microdesmidae  | 2.735|      0.703|
+## |Mullidae       | 1.487|      0.495|
+## |Pomacanthidae  | 0.874|      0.831|
+## |Pomacentridae  | 1.001|      0.918|
+## |Scaridae       | 0.791|      0.662|
+## |Serranidae     | 2.756|      0.751|</code></pre>
 
 
 </div>
